--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/NewMap.NewMap
 EditorStartupMap=/Game/NewMap.NewMap
+GlobalDefaultGameMode=/Game/Blueprints/Game/BP_GameModeBase.BP_GameModeBase_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
