--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -41,3 +41,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/RollaBall.RollaBallPlayer.JumpCount",NewName="/Script/RollaBall.RollaBallPlayer.DashCount")
