--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/NewMap.NewMap
-EditorStartupMap=/Game/NewMap.NewMap
+GameDefaultMap=/Game/ModelToolTestLevel.ModelToolTestLevel
+EditorStartupMap=/Game/ModelToolTestLevel.ModelToolTestLevel
 GlobalDefaultGameMode=/Game/Blueprints/Game/BP_GameModeBase.BP_GameModeBase_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
@@ -44,3 +44,6 @@ ManualIPAddress=
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/RollaBall.RollaBallPlayer.JumpCount",NewName="/Script/RollaBall.RollaBallPlayer.DashCount")
++PropertyRedirects=(OldName="/Script/RollaBall.RollaBallPlayer.SuperChargeMultiplier",NewName="/Script/RollaBall.RollaBallPlayer.SuperchargeMultiplier")
++PropertyRedirects=(OldName="/Script/RollaBall.RollaBallPlayer.SuperCharge",NewName="/Script/RollaBall.RollaBallPlayer.Supercharge")
+
